fixes after discussions with Dima